--- a/HandicapCompany.csproj
+++ b/HandicapCompany.csproj
@@ -22,19 +22,19 @@
 
     <ItemGroup>
         <Reference Include="Assembly-CSharp">
-            <HintPath>/home/agmas/.local/share/Steam/steamapps/common/Lethal Company/Lethal Company_Data/Managed/Assembly-CSharp.dll</HintPath> <!-- Edit this to the actual location -->
+            <HintPath>/pp/SteamLibrary/steamapps/common/Lethal Company/Lethal Company_Data/Managed/Assembly-CSharp.dll</HintPath> <!-- Edit this to the actual location -->
         </Reference>
         <Reference Include="Unity.Netcode.Runtime">
-            <HintPath>/home/agmas/.local/share/Steam/steamapps/common/Lethal Company/Lethal Company_Data/Managed/Unity.Netcode.Runtime.dll</HintPath>
+            <HintPath>/pp/SteamLibrary/steamapps/common/Lethal Company/Lethal Company_Data/Managed/Unity.Netcode.Runtime.dll</HintPath>
           </Reference>
           <Reference Include="Unity.Netcode.Runtime">
-            <HintPath>/home/agmas/.local/share/Steam/steamapps/common/Lethal Company/Lethal Company_Data/Managed/Unity.TextMeshPro.dll</HintPath>
+            <HintPath>/pp/SteamLibrary/steamapps/common/Lethal Company/Lethal Company_Data/Managed/Unity.TextMeshPro.dll</HintPath>
           </Reference>
           <Reference Include="Unity.Netcode.Runtime">
-            <HintPath>/home/agmas/.local/share/Steam/steamapps/common/Lethal Company/Lethal Company_Data/Managed/Unity.InputSystem.dll</HintPath>
+            <HintPath>/pp/SteamLibrary/steamapps/common/Lethal Company/Lethal Company_Data/Managed/Unity.InputSystem.dll</HintPath>
           </Reference>
         <Reference Include="UnityEngine">
-            <HintPath>/home/agmas/.local/share/Steam/steamapps/common/Lethal Company/Lethal Company_Data/Managed/UnityEngine.dll</HintPath> <!-- Edit this to the actual location -->
+            <HintPath>/pp/SteamLibrary/steamapps/common/Lethal Company/Lethal Company_Data/Managed/UnityEngine.dll</HintPath> <!-- Edit this to the actual location -->
         </Reference>
     </ItemGroup>
 </Project>
