--- a/RenameThisToHandicapCompany.csproj
+++ b/RenameThisToHandicapCompany.csproj
@@ -22,19 +22,28 @@
 
     <ItemGroup>
         <Reference Include="Assembly-CSharp">
-            <HintPath>/home/agmas/.local/share/Steam/steamapps/common/Lethal Company/Lethal Company_Data/Managed/Assembly-CSharp.dll</HintPath> <!-- Edit this to the actual location -->
+            <HintPath>/media/agmas/c893da77-a135-43ce-ba20-0bde37811828/SteamLibrary/steamapps/common/Lethal Company/Lethal Company_Data/Managed/Assembly-CSharp.dll</HintPath> <!-- Edit this to the actual location -->
         </Reference>
         <Reference Include="Unity.Netcode.Runtime">
-            <HintPath>/home/agmas/.local/share/Steam/steamapps/common/Lethal Company/Lethal Company_Data/Managed/Unity.Netcode.Runtime.dll</HintPath>
+            <HintPath>/media/agmas/c893da77-a135-43ce-ba20-0bde37811828/SteamLibrary/steamapps/common/Lethal Company/Lethal Company_Data/Managed/Unity.Netcode.Runtime.dll</HintPath>
+        </Reference>
+        <Reference Include="UnityEngine.UI">
+            <HintPath>/media/agmas/c893da77-a135-43ce-ba20-0bde37811828/SteamLibrary/steamapps/common/Lethal Company/Lethal Company_Data/Managed/UnityEngine.UI.dll</HintPath>
+        </Reference>
+        <Reference Include="Unity.Collections">
+            <HintPath>/media/agmas/c893da77-a135-43ce-ba20-0bde37811828/SteamLibrary/steamapps/common/Lethal Company/Lethal Company_Data/Managed/Unity.Collections.dll</HintPath>
+        </Reference>
+          <Reference Include="Unity.Netcode.Runtime">
+            <HintPath>/media/agmas/c893da77-a135-43ce-ba20-0bde37811828/SteamLibrary/steamapps/common/Lethal Company/Lethal Company_Data/Managed/Unity.TextMeshPro.dll</HintPath>
           </Reference>
           <Reference Include="Unity.Netcode.Runtime">
-            <HintPath>/home/agmas/.local/share/Steam/steamapps/common/Lethal Company/Lethal Company_Data/Managed/Unity.TextMeshPro.dll</HintPath>
+            <HintPath>/media/agmas/c893da77-a135-43ce-ba20-0bde37811828/SteamLibrary/steamapps/common/Lethal Company/Lethal Company_Data/Managed/Unity.InputSystem.dll</HintPath>
           </Reference>
-          <Reference Include="Unity.Netcode.Runtime">
-            <HintPath>/home/agmas/.local/share/Steam/steamapps/common/Lethal Company/Lethal Company_Data/Managed/Unity.InputSystem.dll</HintPath>
+          <Reference Include="UnityEngine.InputModule">
+            <HintPath>/media/agmas/c893da77-a135-43ce-ba20-0bde37811828/SteamLibrary/steamapps/common/Lethal Company/Lethal Company_Data/Managed/UnityEngine.InputModule.dll</HintPath>
           </Reference>
         <Reference Include="UnityEngine">
-            <HintPath>/home/agmas/.local/share/Steam/steamapps/common/Lethal Company/Lethal Company_Data/Managed/UnityEngine.dll</HintPath> <!-- Edit this to the actual location -->
-        </Reference>
+            <HintPath>/media/agmas/c893da77-a135-43ce-ba20-0bde37811828/SteamLibrary/steamapps/common/Lethal Company/Lethal Company_Data/Managed/UnityEngine.dll</HintPath> <!-- Edit this to the actual location -->
+            </Reference>
     </ItemGroup>
 </Project>
